# cmk-helm

./: .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  flake.nix
docs/: 001-architecture.md  002-nix-setup.md  003-rust-learning.md  CLAUDE.md
docs/.obsidian/: graph.json  workspace.json
docs/Archive/: 000-index.md  003-rust-learning.md
docs/Templates/: App.md  Architecture.md  Concept.md  Deployment.md  Feature.md  Guide.md  Phase.md  Tool.md  Workflow.md
docs/notes/: 00 Index.md  App State Machine.md  Async Boundary Design.md  Background Refresh.md  CMK Cockpit.md  Configure Screen.md  Crane Build System.md  Credential Auth.md  Crossterm.md  Data Flow.md  Development Workflow.md  Edition Picker Screen.md  Error Handling Strategy.md  Getting Started.md  Git Workflow.md  Installed Versions and Sites Panel.md  Installing Screen.md  Log Panel.md  Module Boundaries.md  Nix Build and Install.md  Nix Flakes.md  Ratatui TUI Framework.md  Reqwest HTTP Client.md  Rust Async Await.md  Rust Closures.md  Rust Derive Macros.md  Rust Enums and Algebraic Data Types.md  Rust Iterators.md  Rust LazyLock Static Variables.md  Rust Let Else Pattern.md  Rust Oneshot Channel.md  Rust Option Type.md  Rust Ownership and Borrowing.md  Rust Pattern Matching.md  Rust Result Type and Error Propagation.md  Rust String vs str.md  Rust Traits.md  TUI Event Loop.md  TUI Layout Design.md  Testing Workflow.md  (+5 more)
src/: debug.rs  main.rs
src/api/: mod.rs
src/installer/: mod.rs
src/ui/: input.rs  mod.rs  render.rs  state.rs
