[package]
name = "cmk-cockpit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cmk-cockpit"
path = "src/main.rs"

[dependencies]
# TUI framework — handles drawing, layout, and widgets
ratatui = "0.29"

# Terminal backend — raw mode, alternate screen, key events
crossterm = "0.28"

# Async runtime — needed for HTTP requests
tokio = { version = "1", features = ["full"] }

# Serialization — used for persisting config / future REST API calls
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client — rustls-tls avoids linking against system OpenSSL at runtime
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# HTML response parsing — the server returns directory listings, not JSON
regex = "1"

# Ergonomic error handling — anyhow::Result<T> everywhere
anyhow = "1"
